# archi

./: .git-blame-ignore-revs  .gitignore  .ralph-scaffold.json  404.html  AGENTS.md  Containerfile  Makefile  PROMPT.md  STATUS.md  WORKFLOW.md  genai-api-companion-system-prompt.md  index.html  pyproject.toml  ralph.conf  search.html  tasks.md
.claude/agents/: black-seam-scout.md  ingestion-verifier.md  provider-config-auditor.md
.github/workflows/: ci.yml  pr-preview.yml  publish-base-images.yml  test-and-build-tag.yml
adding_providers/: index.html
advanced_setup_deploy/: index.html
agents_tools/: index.html
api-reference-v1/: index.html
api_reference/: index.html
argilla/: README.md  docker-compose.yaml
benchmarking/: index.html
cli_reference/: index.html
configuration/: index.html
data_sources/: index.html
deploy/fasrc-dev/: config.example.yaml
developer_guide/: index.html
docs/: mkdocs.yml  operator-checklist.md  questions.md
docs/decisions/: 0001-hierarchical-rerank-dependencies.md  0002-markdown-node-parser.md  0003-hierarchical-rerank-default-on.md
docs/docs/: agents_tools.md  api-reference-v1.md  benchmarking.md  caching-strategy.md  cli_reference.md  configuration.md  data_sources.md  developer_guide.md  fasrc_archi.md  openwebui-integration.md  rag_architecture.md  research-rag-data-freshness.md  user_guide.md  vllm.md
docs/eval/: rubric.md
examples/: sources.manifest.yaml
examples/agents/: cms-comp-ops.md  fasrc-docs.md  indico-assistant.md
examples/benchmarking/: anchor_questions.json  fasrc_ragas_queries.README.md  fasrc_ragas_queries.json
fasrc_archi/: index.html
hooks/: pre-commit
install/: index.html
models_providers/: index.html
openwebui-integration/: index.html
plans/: html-markdown-categorize-ingest.md
proposals/multi-collection-routing/: index.html
proposals/openwebui-compat/: index.html
quickstart/: index.html
rag_architecture/: index.html
requirements/: requirements-base.txt
scripts/: bootstrap_argilla.py  gate.sh  setup_auth_tables.py
scripts/benchmarking/: analyze_grades.ipynb  benchmark_handler_functions.py  generate_prompt_sweep.py  rebuild_benchmark.sh  reset_argilla_dataset.py
scripts/dev/: manage_docker_tags.py  push_docker_images.sh  update_service_base_images.py  update_version.py
search/: search_index.json
secrets/: index.html
services/: index.html
src/archi/: archi.py  copilot_event_adapter.py
src/cli/: cli_main.py  service_registry.py  source_registry.py
src/data_manager/: data_manager.py  data_viewer_service.py  scheduler.py
src/interfaces/: mattermost.py  piazza.py
src/utils/: __init__.py  benchmark_argilla.py  config_access.py  config_service.py  connection_pool.py  conversation_service.py  document_selection_service.py  (+6 more)
tests/: e2e_config_test.py
troubleshooting/: index.html
user_guide/: index.html
(+329 files in other folders)
