[project]
name = "archi"
version = "1.2.4"
description = "An AI Augmented Research Chat Intelligence (archi)"
requires-python = ">=3.7"
authors = [
    {name="Pietro Lugato", email="pmlugato@mit.edu"},
    {name="Julius Heitkoetter", email="juliush@mit.edu"},
    {name="Tim Kraska", email="kraska@mit.edu"},
    {name="Christoph Paus", email="paus@mit.edu"},
    {name="Matthew Russo", email="mdrusso@mit.edu"},
    {name="Luca Lavezzo", email="lavezzo@mit.edu"},
    {name="Jason Mohoney", email="mohoney@mit.edu"}
]
dependencies = [
    "pyyaml==6.0.1",
    "click==8.1.7",
    "jinja2==3.1.3",
    "requests==2.31.0",
    "podman-compose==1.4.0",
    "python-dotenv>=0.19.0",
    "mkdocs==1.6.1",
    "ipykernel==6.30.1",
    "ipython==8.18.0",
    "matplotlib==3.9.4",
    "pandas==2.3.2",
    "isort==6.0.1",
    "pre-commit>=4",
    "psycopg2-binary==2.9.10",
    "markitdown[pdf,pptx]==0.1.5",
    # hierarchical-rerank-retrieval: the deployment images install deps via
    # `pip install .` (Dockerfile-chat / Dockerfile-data-manager) on top of the
    # published a2rchi base image, so feature deps MUST be declared here — not only
    # in requirements/requirements-base.txt (which the gate/CI and base-image build
    # use). Versions match requirements-base.txt.
    "llama-index-core==0.14.19",
    "flashrank==0.2.10",
    # html-markdown-categorize-ingest: HTML->Markdown conversion at the persist
    # seam. Built on the already-present beautifulsoup4. Pin matches
    # requirements/requirements-base.txt.
    "markdownify==1.2.2",
    # add-sources-build-command: the `archi sources build` crawl path imports
    # bs4. beautifulsoup4 was declared only in requirements/requirements-base.txt,
    # so a fresh `pip install .`/editable install and the deployment images would
    # lack it and the crawl path would ImportError. Version matches
    # requirements-base.txt.
    "beautifulsoup4==4.12.3"
]

[project.scripts]
archi = "src.cli.cli_main:main"

[tool.setuptools.package-data]
"src.cli" = ["templates/**/*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
addopts = "-v --tb=short"

[tool.pyright]
pythonVersion = "3.11"
extraPaths = ["."]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/node_modules", "config", "openspec/changes"]

[tool.isort]
# Adopt black's import-wrapping style so `isort` and `black` agree. Without this
# they disagree on multi-line import formatting and the two can never both pass
# --check on the same file.
profile = "black"

[project.urls]
"Homepage" = "https://github.com/archi-physics/archi"
